# appgrep

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  cli.rs  engine.rs  error.rs  main.rs
src/output/: exec.rs  json.rs  mod.rs  names.rs  table.rs  tsv.rs
src/provider/: brew.rs  cargo.rs  desktop.rs  dnf.rs  dpkg.rs  flatpak.rs  mod.rs  npm.rs  pacman.rs  snap.rs  standalone.rs
tests/: cli_tests.rs  provider_tests.rs
tests/fixtures/: nodisplay.desktop  unicode.desktop  valid.desktop
