[package]
name = "appgrep"
version = "0.2.0"
edition = "2021"
rust-version = "1.75.0"
description = "Unified CLI tool to discover all installed applications on Linux"
license = "MIT"
repository = "https://github.com/kikinit/appgrep"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4"
anyhow = "1"
thiserror = "2"
rayon = "1"
fuzzy-matcher = "0.3"
comfy-table = "7"
configparser = "3"
dirs = "6"
clap_complete = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
